[gd_scene load_steps=7 format=3 uid="uid://blv8ydpuxesd3"]

[ext_resource type="StyleBox" uid="uid://ioeacivvvyo1" path="res://ui/9_patch_stylebox_dark.tres" id="1_b5hhn"]
[ext_resource type="Script" uid="uid://ehds2w4ndl6p" path="res://world/interactable/computer/recipes/item_panel.gd" id="2_cr55m"]
[ext_resource type="StyleBox" uid="uid://bdkk47742j3ol" path="res://ui/9_patch_stylebox_white.tres" id="3_jgcfm"]
[ext_resource type="Texture2D" uid="uid://cwps3akwx0brn" path="res://images/objects.png" id="4_6t5qb"]

[sub_resource type="LabelSettings" id="LabelSettings_b5hhn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_l34hu"]
atlas = ExtResource("4_6t5qb")
region = Rect2(96, 0, 16, 16)

[node name="Recipe" type="PanelContainer"]
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("1_b5hhn")
script = ExtResource("2_cr55m")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="RecipeName" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Cucumber Maki"
label_settings = SubResource("LabelSettings_b5hhn")
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
mouse_filter = 1
theme_override_styles/panel = ExtResource("3_jgcfm")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="RecipeTexture" type="TextureRect" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
size_flags_vertical = 3
texture = SubResource("AtlasTexture_l34hu")
expand_mode = 3
stretch_mode = 4

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
